# nccl-tests

./: CMakeLists.txt  compile.sh
src/: common.cu
